--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -39,6 +39,10 @@
     @apply w-[250px] md:w-[320px] h-[300px] md:h-[388px] rotate-[5.75deg] transition-transform duration-300
     ease-in-out hover:scale-105 hover:rotate-[3deg];
   }
+  .profile-icon {
+    @apply w-[200px] md:w-[280px] h-[300px] md:h-[280px] rotate-[5.75deg] transition-transform duration-300
+    ease-in-out hover:scale-105 hover:rotate-[3deg];
+  }
   .icon-img {
     @apply w-12 md:w-16 h-12 md:h-16 absolute transition-transform duration-300
     ease-in-out hover:scale-110 hover:rotate-0;
