--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -17,7 +17,7 @@
   .menu-wrapper {
     @apply md:flex flex-col md:flex-row gap-4 md:gap-8 text-sm font-medium absolute md:static top-[70px]
     left-0 w-full md:w-auto bg-white/45 md:bg-transparent rounded-lg md:rounded-none shadow-md
-    md:shadow-none p-4 md:p-0 z-50 border border-[#fee6cc] md:border-none backdrop-blur-[40px] md:backdrop-blur-none;
+    md:shadow-none p-4 md:p-0 z-50 border border-cement md:border-none backdrop-blur-[40px] md:backdrop-blur-none;
   }
   .menu-item {
     @apply relative before:content-[''] before:absolute before:w-0 before:h-[3px] before:bg-gradient-primary
